Closed Bug 217768 Opened 23 years ago Closed 23 years ago

interruptHandler isn't properly loaded if trapHandler returns JSTRAP_CONTINUE

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: rginda, Assigned: rginda)

Details

(Keywords: fixed1.5)

Attachments

(1 file)

It is possible for a call to rt->trapHandler to modify rt->interruptHook, js_Interp doesn't currently deal with that in the JSTRAP_CONTINUE case. Patch coming up.
taking
Assignee: rogerl → rginda
Attached patch simple patchSplinter Review
Attachment #130609 - Flags: superreview?(brendan)
Attachment #130609 - Flags: approval1.5?
Comment on attachment 130609 [details] [diff] [review] simple patch Looks good -- any other places like it? I didn't see any. I'll let another driver approve, but this is safe for 1.5 final. /be
Attachment #130609 - Flags: superreview?(brendan) → superreview+
Comment on attachment 130609 [details] [diff] [review] simple patch a=asa (on behalf of drivers) for checkin to Mozilla 1.5
Attachment #130609 - Flags: approval1.5? → approval1.5+
checked in to branch and trunk
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Checkin verified -
Status: RESOLVED → VERIFIED
Keywords: fixed1.5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: