bug 217768, interruptHandler isn't properly loaded if trapHandler returns JSTRAP_CONTINUE sr=brendan